--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
 }
 h1{
     padding:0px 0px 10px 600px;
+    margin-right: 500px;
     font-size: 30px;
     font-family: courier new;
     color: rgb(255, 255, 255);
@@ -15,6 +16,7 @@ h6{
 }
 li{
     padding:0px 0px 10px 400px;
+    margin-right: 500px;
     font-size: 30px;
     font-family: courier;
     font-weight: bold;
@@ -22,6 +24,7 @@ li{
 }
 p{
     padding-left: 500px;
+    margin-right: 500px;
     width: 650px;
     font-size: 30px;
     font-family: times new roman;
