--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ h1{
     font-family: courier new;
     color: rgb(255, 255, 255);
 }
+h2{
+    
+}
 h6{
     padding:0px 0px 10px 600px;
     font-size: 17px;
